# Anticarium_Desktop

./: .gitignore  .qmake.stash  Anticarium_Desktop.pro  Anticarium_Desktop.pro.user.fadee64  CHANGELOG.md  CMakeLists.txt  Home.ui  Makefile  Makefile.Debug  Makefile.Release  README.md  VersionConfig.h.in  anticarium.cpp  anticarium.h  commonHeader.h  hometab.cpp  hometab.h  hometab.ui  jttp.cpp  jttp.h  jttp.h.autosave  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  modestab.h  modestab.ui  resources.qrc  settings.ini.in  ui_Home.h  ui_hometab.h  ui_mainwindow.h  ui_modestab.h  ui_usertab.h  usertab.h  usertab.ui
apps/: CMakeLists.txt  main.cpp
cmake/: ExternLibs.cmake
custom_elements/: clickablewidget.cpp  clickablewidget.h
debug/: Anticarium_Desktop.ilk  moc_clickablewidget.cpp  moc_jttp.cpp  moc_usertab.cpp  qrc_resources.cpp
flask_test_server/: app.py
flask_test_server/env/Scripts/: activate  activate.bat
release/: moc_hometab.cpp  moc_jttp.cpp  moc_modestab.cpp
src/: CMakeLists.txt
src/anticarium_desktop/: DisplayRegimesManager.cpp  DisplayRegimesManager.h  ImageBuilder.cpp  ImageBuilder.h  ImageProcessor.cpp  ImageProcessor.h  Jttp.cpp  Jttp.h  MainWindowManager.cpp  MainWindowManager.h  Resources.qrc  RowBuilder.cpp  RowBuilder.h  UDPReader.cpp  UDPReader.h  VideoManager.cpp  VideoManager.h  WindowsResources.rc  jttp.cpp  jttp.h  resources.qrc
src/anticarium_desktop/config/: ApplicationSettings.cpp  ApplicationSettings.h  ImageRow.hpp
src/anticarium_desktop/custom_elements/: clickablewidget.cpp  clickablewidget.h
src/anticarium_desktop/widgets/: DisplayRegimes.cpp  DisplayRegimes.h  DisplayRegimes.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  RegimeDialog.cpp  RegimeDialog.h  RegimeDialog.ui  RequestWaiter.cpp  RequestWaiter.h  hometab.cpp  hometab.h  hometab.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  modestab.cpp  usertab.cpp
tests/: CMakeLists.txt  ImageBuilderTests.cpp
tests/config/: ApplicationSettingsTests.cpp  TestSettings.ini
